# ChromProcess

./: .gitignore  Cargo.toml  ChromProcess_Introduction.ipynb  ChromProcess_Introduction_1.ipynb  ChromProcess_Introduction_2.ipynb  Classes.py  LICENSE  Makefile  Peaks_to_integral.py  README.md  __init__.py  calibration_functions.py  calibration_operations.py  convert_cdf_to_csv.py  data_folder_process_sequence.py  deconvolution.py  environment.yaml  environment.yml  file_import.py  file_output.py  find_peaks_from_chromatogram.py  installation.md  mypy.ini  peak_operations.py  plotting.py  pyproject.toml  series_builder.py  series_operations.py  setup.py  temp.py  test.py  test_cluster.py  test_integral.py
ChromProcess/: Classes.py  __init__.py  build_cluster_tree.py  build_experiment.py  chromatogram_operations.py  dash_integration.py  data_folder_process_sequence.py  deconvolution.py  error_calculations.py  file_import.py  file_output.py  info_params.py  mass_spectra.py  peak_operations.py  plotting.py  processing_functions.py  sequences.py  simple_functions.py  write_calib_file.py
ChromProcess/Classes/: AnalysisInformation.py  BST.py  CalibrationAllocations.py  Chromatogram.py  Data.py  DataPath.py  DataPaths.py  DataReport.py  ExperimentConditions.py  InstrumentCalibration.py  MassSpectrum.py  Metadata.py  Peak.py  PeakCollection.py  PeakCollectionElement.py  PeakCollectionSeries.py  __init__.py  analysis_information.py  chromatogram.py  data_report.py  deconvolution_parameters.py  experiment_conditions.py  instrument_calibration.py  mass_spectrum.py  peak.py  peak_collection.py
ChromProcess/Loading/: __init__.py
ChromProcess/Processing/: __init__.py  chromatogram_operations.py  mass_spectra.py  peak_operations.py  processing_functions.py
ChromProcess/Utils/: __init__.py  build_experiment.py  deconvolution.py  simple_functions.py
Examples/: Data_information.csv  example_calibrations.csv
HPLC/: 2019_12_16_HPLC_processing.py
Sample_analysis/: Calibration_file_allocations.csv  searchtree.py  toml_test_script.py
Scripts/: 1_PreScrapeInspection.py  2021_03_29_GCMS_Calibrations.csv  2_ScrapeSingleFolder.py  3_batchProcessPeakTables.py  4_inspectDataReports.py  InspectChromatograms.py  ProcessPeakTableBatch.py  Tutorial.ipynb  Tutorial.py  error_calculations.py  example_data_point_removals.csv  example_local_assignments.csv
Templates/: 2019_12_02_GCMS_Calibrations.csv  2020_02_18_GCMS_Calibration.csv  2020_03_16_GCMS_Calibrations.csv  Calibration_file_allocations.csv  Data_information.csv  example_analysis_details.csv  example_conditions.csv
Tutorials/: ChromProcess_Introduction_1.ipynb  ChromProcess_Introduction_2.ipynb  ChromProcess_Introduction_2_deconvolution.ipynb  ChromProcess_Introduction_3_deconvolution.ipynb  ChromProcess_Tutorial_5_Background_subtraction.ipynb  Untitled.ipynb
docs/: ChromProcess.html  Makefile  index.html  search.js
rust_src/: lib.rs
(+400 files in other folders)
